After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761931 - harness: fix the race in blocking push mode
harness: fix the race in blocking push mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal major
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-12 12:12 UTC by Håvard Graff (hgr)
Modified: 2016-02-12 14:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.82 KB, patch)
2016-02-12 12:12 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2016-02-12 12:12:42 UTC
Created attachment 320964 [details] [review]
patch

Depending on when gst_harness_pull was called - before the buffer reached
gst_harness_chain or after we can get different behaviors of the test
with enabled blocking push mode. The fix makes the behavior always the
same. In pull function we get the buffer first, thus making sure
gst_harness_chain waits for the signal, and emitting the signal after.
Comment 1 Tim-Philipp Müller 2016-02-12 13:18:26 UTC
commit 06ae41e0b211402d3032762ad4788ae3eef06a97
Author: Mikhail Fludkov <misha@pexip.com>
Date:   Tue Aug 4 17:09:35 2015 +0200

    harness: fix the race in blocking push mode
    
    Depending on when gst_harness_pull was called - before the buffer reached
    gst_harness_chain or after we can get different behaviors of the test
    with enabled blocking push mode. The fix makes the behavior always the
    same. In pull function we get the buffer first, thus making sure
    gst_harness_chain waits for the signal, and emitting the signal after.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=761931